style: green WhatsApp button

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
               <div class="form__actions">
                 <button class="btn" type="submit">Enviar</button>
-                <a class="btn btn--ghost" href="#" data-wa-link>WhatsApp</a>
+                <a class="btn btn--whatsapp" href="#" data-wa-link>WhatsApp</a>
               </div>
 
               <p class="tiny muted" id="formHint">
