chore: restore R logo mark

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header" id="topo">
       <div class="container header__inner">
         <a class="brand" href="#topo" aria-label="Ir para o topo">
-          <span class="brand__mark" aria-hidden="true">⚖</span>
+          <span class="brand__mark" aria-hidden="true">R</span>
           <span class="brand__text">
             <span class="brand__name">Resende Azzi | Soluções Jurídicas</span>
             <span class="brand__tag">Estratégia • Confiança • Resultado</span>
